moving from ArrayList to ArrayDeque